Update to Java 16
Glenn is amazing